--- a/src/assets/scss/components/ModalComponent.scss
+++ b/src/assets/scss/components/ModalComponent.scss
@@ -23,7 +23,7 @@
 
   &__header {
     padding: 20px;
-     display: flex;
+    display: flex;
     align-items: center;
     justify-content: space-between;
   }
@@ -37,11 +37,14 @@
   }
   &__button {
     cursor: pointer;
-    padding: 5px;
+    padding: 5px 8px;
     border-radius: 5px;
     background-color: #42b983;
     color: white;
 
     border-color: transparent;
+    &--close {
+      background-color: red;
+    }
   }
 }
