--- a/src/assets/scss/components/Nav.scss
+++ b/src/assets/scss/components/Nav.scss
@@ -1,19 +1,18 @@
 .nav {
-  display:flex;
-  justify-content:center;
-  gap:20px;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
   &__link {
     font-size: 20px;
-color: black;
+    color: black;
     text-decoration: none;
     border-bottom: 2px solid transparent;
-    transition:border-color linear .3s;
-    &:hover{
+    transition: border-color linear 0.3s;
+    &:hover {
       border-bottom: 2px solid black;
     }
-&--active{
-  border-bottom: 2px solid black;
-}
-
+    &--active {
+      border-bottom: 2px solid black;
+    }
   }
 }
