--- a/src/assets/scss/helpers/animations.scss
+++ b/src/assets/scss/helpers/animations.scss
@@ -1,9 +1,9 @@
-.v-enter-active,
-.v-leave-active {
-  transition: opacity 0.5s ease;
+.fade-enter-active,
+.fade-leave-active {
+  transition: opacity 0.5s;
 }
 
-.v-enter-from,
-.v-leave-to {
+.fade-enter,
+.fade-leave-to {
   opacity: 0;
 }
